<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="license">Пользовательское соглашение</string>
    <string name="library_screen">This is library screen</string>
    <string name="clear_button">clear button</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_rec">dj0j@yandex.ru</string>
    <string name="licence_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="back_button">back button</string>
    <string name="track_image_description">track image</string>
    <string name="info_arrow_description">info arrow</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="bad_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_duration">Длительность</string>
    <string name="track_country">Страна</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_current_time">0:00</string>
    <string name="track_image">Track image</string>
    <string name="add_button">add button</string>
    <string name="play_button">play button</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="open_license_error">Не удалось открыть лицензию</string>
    <string name="share_app_error">Не удалось поделиться приложением</string>
    <string name="open_support_error">Не удалось обратиться в поддержку</string>
    <string name="favorites_empty_placeholder">Ваша медиатека пуста</string>
    <string name="image_favorites_placeholder">image favorites placeholder</string>
    <string name="image_playlists_placeholder">image playlists placeholder</string>
    <string name="playlists_empty_placeholder">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_image">playlist image</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="confirm_dialog_title">Завершить создание плейлиста?</string>
    <string name="confirm_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="confirm_dialog_negative">Отмена</string>
    <string name="confirm_dialog_positive">Завершить</string>
    <plurals name="playlist_track_number">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="playlist_time">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="playlist_image_desc">playlist image</string>
    <string name="playlist_share">playlist share</string>
    <string name="empty_playlist">Ваш плейлист пуст</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="not">Нет</string>
    <string name="yes">Да</string>
    <string name="share_playlist_error">Не удалось поделиться плейлистом</string>
    <string name="playlist_bottom_sheet_share">Поделиться</string>
    <string name="redact_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_title">Хотите удалить плейлист «%s»?</string>
    <string name="redact">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="empty_track_list">В данном плейлисте нет треков,\nкоторыми можно поделиться</string>
</resources>