<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LinearLayoutBackButtonStyle"
        android:layout_marginBottom="28dp">
        <ImageButton
            style="@style/ImageBackButtonStyle"
            android:id="@+id/button_settings_back"/>
        <TextView
            style="@style/TextBackButtonStyle"
            android:text="@string/settings"/>
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switcher_theme"
        android:text="@string/dark_theme"
        android:paddingStart="@dimen/setting_screen_padding_start"
        android:paddingEnd="@dimen/setting_screen_padding_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/settings_buttons_text_size"
        android:fontFamily="@font/ys_display_regular"
        app:trackTint="@color/switch_track_tint"
        app:thumbTint="@color/switch_thumb_tint"/>

    <Button style="@style/SettingsButtonsStyle"
        android:id="@+id/button_share"
        android:text="@string/share"
        app:icon="@drawable/ic_share"/>

    <Button style="@style/SettingsButtonsStyle"
        android:id="@+id/button_support"
        android:text="@string/support"
        app:icon="@drawable/ic_support"/>

    <Button style="@style/SettingsButtonsStyle"
        android:id="@+id/button_licence"
        android:text="@string/license"
        app:icon="@drawable/ic_arrow_forward"/>

</LinearLayout>