<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/background"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        style="@style/TextHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switcher_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:paddingStart="@dimen/setting_screen_padding_start"
        android:paddingTop="21dp"
        android:paddingEnd="@dimen/setting_screen_padding_end"
        android:paddingBottom="21dp"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/settings_buttons_text_size"
        app:thumbTint="@color/switch_thumb_tint"
        app:trackTint="@color/switch_track_tint" />

    <Button
        android:id="@+id/button_share"
        style="@style/SettingsButtonsStyle"
        android:text="@string/share"
        app:icon="@drawable/ic_share" />

    <Button
        android:id="@+id/button_support"
        style="@style/SettingsButtonsStyle"
        android:text="@string/support"
        app:icon="@drawable/ic_support" />

    <Button
        android:id="@+id/button_licence"
        style="@style/SettingsButtonsStyle"
        android:text="@string/license"
        app:icon="@drawable/ic_arrow_forward" />

</LinearLayout>