<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingStart="17dp"
    android:paddingEnd="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main_top_header"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/main_header_text_size" />

    <Button style="@style/MainButtonsStyle"
        android:id="@+id/button_search"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        />
    <Button style="@style/MainButtonsStyle"
        android:id="@+id/button_library"
        android:text="@string/library"
        app:icon="@drawable/ic_library"
        />
    <Button style="@style/MainButtonsStyle"
        android:id="@+id/button_settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        android:layout_marginBottom="28dp"
        />


</LinearLayout>