<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".ui.player.AudioPlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.player.AudioPlayerFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_player_left_padding"
            style="@style/PlayerGuidelineStyle"
            app:layout_constraintGuide_begin="@dimen/player_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_player_right_padding"
            style="@style/PlayerGuidelineStyle"
            app:layout_constraintGuide_end="@dimen/player_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_track_info_left_padding"
            style="@style/PlayerGuidelineStyle"
            app:layout_constraintGuide_begin="@dimen/track_info_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_track_info_right_padding"
            style="@style/PlayerGuidelineStyle"
            app:layout_constraintGuide_end="@dimen/track_info_padding" />

        <ImageButton
            android:id="@+id/button_player_back"
            style="@style/ImageBackButtonStyle"
            android:layout_marginStart="@dimen/back_button_padding"
            android:layout_marginTop="@dimen/back_button_padding"
            android:contentDescription="@string/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_player_track_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/track_image"
            android:src="@drawable/ic_player_track_placeholder"
            app:layout_constraintBottom_toTopOf="@id/tv_player_track_name"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/gl_player_right_padding"
            app:layout_constraintStart_toEndOf="@id/gl_player_left_padding"
            app:layout_constraintTop_toBottomOf="@id/button_player_back" />

        <TextView
            android:id="@+id/tv_player_track_name"
            style="@style/PlayerTrackTextStyle"
            android:layout_marginTop="24dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@id/gl_track_info_right_padding"
            app:layout_constraintStart_toEndOf="@id/gl_player_left_padding"
            app:layout_constraintTop_toBottomOf="@id/iv_player_track_image"
            tools:text="Song name" />

        <TextView
            android:id="@+id/tv_player_artist_name"
            style="@style/PlayerTrackTextStyle"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/gl_track_info_right_padding"
            app:layout_constraintStart_toEndOf="@id/gl_player_left_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_player_track_name"
            tools:text="Band name" />

        <ImageButton
            android:id="@+id/button_add_to_playlist"
            style="@style/PlayerSmallButtonStyle"
            android:layout_marginTop="54dp"
            android:contentDescription="@string/add_button"
            android:src="@drawable/ic_add_to_playlist"
            app:layout_constraintEnd_toStartOf="@id/button_player_play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/gl_player_left_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_player_artist_name" />

        <ImageButton
            android:id="@+id/button_player_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_play_button"
            app:layout_constraintBottom_toBottomOf="@id/button_add_to_playlist"
            app:layout_constraintEnd_toStartOf="@id/button_add_to_favorite"
            app:layout_constraintStart_toEndOf="@id/button_add_to_playlist"
            app:layout_constraintTop_toTopOf="@id/button_add_to_playlist" />

        <ImageButton
            android:id="@+id/button_add_to_favorite"
            style="@style/PlayerSmallButtonStyle"
            android:contentDescription="@string/add_to_favorite"
            android:src="@drawable/ic_add_to_favorite"
            app:layout_constraintEnd_toStartOf="@id/gl_player_right_padding"
            app:layout_constraintStart_toEndOf="@id/button_player_play"
            app:layout_constraintTop_toTopOf="@id/button_add_to_playlist" />

        <TextView
            android:id="@+id/tv_player_track_current_time"
            style="@style/PlayerTrackTextStyle"
            android:layout_marginTop="12dp"
            android:text="@string/track_current_time"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/gl_player_right_padding"
            app:layout_constraintStart_toEndOf="@id/gl_player_left_padding"
            app:layout_constraintTop_toBottomOf="@id/button_player_play" />

        <TextView
            android:id="@+id/tv_duration"
            style="@style/PlayerInfoTextStyle"
            android:layout_marginTop="39dp"
            android:text="@string/track_duration"
            app:layout_constraintStart_toEndOf="@id/gl_track_info_left_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_player_track_current_time" />

        <TextView
            android:id="@+id/tv_player_track_time"
            style="@style/PlayerTrackInfoTextStyle"
            app:layout_constraintEnd_toStartOf="@id/gl_track_info_right_padding"
            app:layout_constraintTop_toTopOf="@id/tv_duration"
            tools:text="5:25" />

        <TextView
            android:id="@+id/tv_album"
            style="@style/PlayerInfoTextStyle"
            android:layout_marginTop="17dp"
            android:text="@string/track_album"
            app:layout_constraintStart_toEndOf="@id/gl_track_info_left_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_duration" />

        <TextView
            android:id="@+id/tv_player_track_album"
            style="@style/PlayerTrackInfoTextStyle"
            android:layout_width="0dp"
            android:layout_marginStart="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toStartOf="@id/gl_track_info_right_padding"
            app:layout_constraintStart_toEndOf="@id/tv_album"
            app:layout_constraintTop_toTopOf="@id/tv_album"
            tools:text="Yesterday (Remastered 2009)" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_player_track_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_album,tv_player_track_album" />

        <TextView
            android:id="@+id/tv_year"
            style="@style/PlayerInfoTextStyle"
            android:layout_marginTop="17dp"
            android:text="@string/track_year"
            app:layout_constraintStart_toEndOf="@id/gl_track_info_left_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_album" />

        <TextView
            android:id="@+id/tv_player_track_year"
            style="@style/PlayerTrackInfoTextStyle"
            app:layout_constraintEnd_toStartOf="@id/gl_track_info_right_padding"
            app:layout_constraintTop_toTopOf="@id/tv_year"
            tools:text="1965" />

        <TextView
            android:id="@+id/tv_genre"
            style="@style/PlayerInfoTextStyle"
            android:layout_marginTop="17dp"
            android:text="@string/track_genre"
            app:layout_constraintStart_toEndOf="@id/gl_track_info_left_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_year" />

        <TextView
            android:id="@+id/tv_player_track_genre"
            style="@style/PlayerTrackInfoTextStyle"
            app:layout_constraintEnd_toStartOf="@id/gl_track_info_right_padding"
            app:layout_constraintTop_toTopOf="@id/tv_genre"
            tools:text="Rock" />

        <TextView
            android:id="@+id/tv_country"
            style="@style/PlayerInfoTextStyle"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="28dp"
            android:text="@string/track_country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_track_info_left_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <TextView
            android:id="@+id/tv_player_track_country"
            style="@style/PlayerTrackInfoTextStyle"
            app:layout_constraintEnd_toStartOf="@id/gl_track_info_right_padding"
            app:layout_constraintTop_toTopOf="@id/tv_country"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="540dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_line_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_to_playlist"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="19sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_playlist"
            style="@style/SearchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/new_playlist" />

        <ProgressBar
            android:id="@+id/pb_playlists"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:indeterminateTint="@color/search_progress_bar"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/fl_playlists_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_playlists_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_playlists_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/image_playlists_placeholder"
                    android:src="@drawable/ic_nothing_found_placeholder" />

                <TextView
                    android:id="@+id/tv_playlists_placeholder"
                    style="@style/SearchTVStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/playlists_empty_placeholder" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_playlists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/playlist_vertical_item" />
        </FrameLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>